[gd_scene load_steps=3 format=3 uid="uid://bjmsw856cv7m2"]

[ext_resource type="Script" path="res://Inventories/shop_inventories/weapon_shop/weapon_shop_ui.gd" id="1_ewjfc"]
[ext_resource type="PackedScene" uid="uid://w25rgtwe3010" path="res://Inventories/shop_inventories/weapon_shop/weapon_shop_display.tscn" id="2_ndkbs"]

[node name="WeaponShopUI" type="Control"]
layout_mode = 3
anchor_right = 0.998
anchor_bottom = 1.002
offset_left = 38.0
offset_top = 32.0
offset_right = -32.696
offset_bottom = -27.296
script = ExtResource("1_ewjfc")
display_slot = ExtResource("2_ndkbs")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2
anchor_left = -0.038
anchor_top = -0.015
anchor_right = 1.034
anchor_bottom = 0.088
offset_left = 0.00200272
offset_top = -0.15
offset_right = 0.313965
offset_bottom = 0.0799942

[node name="table names" type="HBoxContainer" parent="PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 160

[node name="Label" type="Label" parent="PanelContainer2/table names"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "player"

[node name="Label4" type="Label" parent="PanelContainer2/table names"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "player sells"

[node name="Label2" type="Label" parent="PanelContainer2/table names"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "player buys"

[node name="Label3" type="Label" parent="PanelContainer2/table names"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "shop"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.036
anchor_top = 0.084
anchor_right = 1.029
anchor_bottom = 0.914
offset_left = 29.458
offset_top = 22.242
offset_right = -29.291
offset_bottom = -22.062
grow_horizontal = 2
grow_vertical = 2

[node name="tables" type="HBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(1150, 490)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 70
alignment = 1

[node name="PlayerGrid" type="GridContainer" parent="PanelContainer/tables"]
unique_name_in_owner = true
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="playersells" type="GridContainer" parent="PanelContainer/tables"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="playerbuys" type="GridContainer" parent="PanelContainer/tables"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="ShopGrid" type="GridContainer" parent="PanelContainer/tables"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="accept_decline" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.036
anchor_top = 0.897
anchor_right = 1.029
anchor_bottom = 1.031
offset_left = -0.155998
offset_top = -0.22998
offset_right = -0.291016
offset_bottom = -0.290039
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="accept_decline"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 142
alignment = 1

[node name="player_money" type="Label" parent="accept_decline/HBoxContainer"]
layout_mode = 2
text = "Player money:"

[node name="player_money_count" type="Label" parent="accept_decline/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 23)
layout_mode = 2
text = "1000000"

[node name="total_cost" type="Label" parent="accept_decline/HBoxContainer"]
layout_mode = 2
text = "Total cost"

[node name="total_cost_count" type="Label" parent="accept_decline/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 23)
layout_mode = 2
text = "1000000"

[node name="accept" type="Button" parent="accept_decline/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Accept"

[node name="decline" type="Button" parent="accept_decline/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Decline
"

[connection signal="pressed" from="accept_decline/HBoxContainer/accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="accept_decline/HBoxContainer/decline" to="." method="_on_decline_pressed"]
